E:42063 [!] Bug: When you move the line with long fields in the list, the list width collapses to the width of the longest line. Fixed.

--- a/src/skins/admin/en/items_list/model/table/style.css
+++ b/src/skins/admin/en/items_list/model/table/style.css
@@ -132,7 +132,6 @@
 }
 
 .items-list-table table.list tbody td.actions .inline-move {
-  height: 31px;
   padding-top: 8px;
   width: 37px;
 }
